--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a class="nav-link" href="#">CV</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Stage</a>
+                <a class="nav-link" href="./pages/stage.html">Stage</a>
               </li>
             </ul>
           </div>
@@ -41,9 +41,19 @@
       <section class="hero">
       <h1>Ciao, sono Gabriele</h1>
       <h3>Operatore Infomatico</h3>
-
-
       </section>
+      <footer>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-4">colonna 1 </div>
+        <div class="col-4">colonna 2 </div>
+        <div class="col-4">colonna 3 </div>
+
+
+    </div>
+</div>
+
+      </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./script.js"></script>
