--- a/pages/stage.html
+++ b/pages/stage.html
@@ -41,11 +41,7 @@
     <!-- Sezione Hero -->
     <section class="hero2">
    
-  <div class="row justify-content-center">
-    <div class="col-12">
-      <h2 class="text-center mt-4 mb-1">Introduzione</h2>
-    </div>
-  </div>
+  
 </section>
   </div>
 </div>
@@ -75,24 +71,55 @@ Una volta terminato il tirocinio, il tutor aziendale ha il dovere di firmare i r
           <div class="row justify-content-center mb-5">
 
 
-    <section class="stage ps-5 pe-5">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-6">
-             <div class="row justify-content-center align-items-center" style="height: 200px;">
-  <h2 class="text-center">introduzione</h2>
-              <p>
-                Questo è il paragrafo nel quale scrivo l'introduzione agli 
-                stage bla bla bla bla bla bla. 
+    
+  </section>
+    </div>
+      </section>
+      <section id="cv">
+        <div class="conteiner-fluid">
+          <div class="row justify-content-center">
+            <div class="col-6 foglio"> 
+              <h4 class="text-center">Gabriele Codecasa</h4>
+              <p class="text-center">
+               Introduzione della esperienza lavorativa
               </p>
-          </div>  
-        </div>
-        <div class="row">
-          <div class="col-6">
-            <h3>Sottotitolo</h3>
-            <p>QUi metto tutta la relazione stage che ho scritto 
-              e bla bla bla bla bla bla.
-            </p>
+             <hr>
+
+            <p>Durante questo periodo di stage, ho lavorato presso l’azienda Vapore 1928, in via Messina a Cenisio. Il locale Vapore offre vari servizi, dalla colazione dal pranzo, inoltre è possibile affittare il locale per eventi privati o partecipare agli eventi pubblici che vengono organizzati dal titolare. Vapore 1928 ha un design molto innovativo, i suoi interni ricordano uno stile gotico e moderno. I soffitti sono molto alti, sono presenti grandi finestre e alcuni archi di metallo che attraversano l’intera struttura. All’interno del locale sono presenti cinque baristi: due dietro al bancone all’entrata, un dipendente si trovava sempre dietro la cassa e infine c’erano due camerieri che si occupavano del servizio ai tavoli. Io e il mio collega, lavoravamo in un angolo del locale, vicino al responsabile degli eventi, che era anche il nostro tutor aziendale.
+Una giornata tipo lavorativa iniziava alle 9:00, il tutor aziendale ogni lunedì ci assegnava diversi lavori da consegnare entro il venerdì della settimana.
+La nostra pausa pranzo durava dalle 12:30 alle 13:30 circa, dopodichè lavoravamo interrotti fino alle 18:00. I lavori tipici che ci assegnavano erano creare locandine per gli eventi o tener conto su fogli excel delle ore lavorative del personale presente durante le giornate. Come strumento di lavoro usavamo i nostri computer personali, l’azienda ospitante ci forniva solamente il pranzo.
+
+
+            </div>
+          </div>
+          <div class="row justify-content-center mb-5">
+
+ </section>
+    </div>
+      </section>
+      <section id="cv">
+        <div class="conteiner-fluid">
+          <div class="row justify-content-center">
+            <div class="col-6 foglio"> 
+              <h4 class="text-center">Gabriele Codecasa</h4>
+              <p class="text-center">
+               Introduzione della esperienza lavorativa
+              </p>
+             <hr>
+
+            <p>Rispetto all'anno scorso, ho preferito il periodo di tirocinio di quest’anno, perché ho avuto più spazio personale e più responsabilità e ho stretto un buon rapporto con il tutor aziendale.
+Sono stato in grado di applicare le conoscenze acquisite a scuola nel contesto stage, per esempio ho imparato a gestire meglio il mio tempo e ho imparato a esprimermi in maniera consona con i colleghi e clienti.
+Sotto alcuni punti di vista devo migliorare molto, come la puntualità sul posto di lavoro e la responsabilità di fronte ai problemi.
+In futuro io vorrei andare a lavorare all’estero, in particolare in America, vorrei occuparmi di sicurezza informatica, sia la parte di sicurezza del software e sia la parte di hardware (installazione di telecamere di sicurezza).
+  
+</p>
+            </div>
+          </div>
+          <div class="row justify-content-center mb-5">
+
+
+
+     
           </div>
           <div class="col-6">
             <img class="img-fluid" src="../img/Luna (1)..png" alt="">
