--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="card" style="width: 18rem;">
             <img src="./img/programmation-creer-jeu.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
+              <h5 class="card-title">Videogiochi</h5>
               <p class="card-text">Fin da piccolo, ho sempre avuto una passione per i videogiochi. Mi ha sempre appassionato sia la parte di programmazione sia la parte di grafica.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
@@ -71,10 +71,10 @@
   
         <div class="col-4 mezzo">
           <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="./img/2193314-45823610-2560-1440.jpg" class="card-img-top" alt="Palla da basket">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Sport: Calcio e Basket</h5>
+              <p class="card-text">Il calcio e il basket sono le mie passioni principali: mi piace giocare a calcio con gli amici e seguire le partite, ma anche il basket mi entusiasma molto, sia praticarlo che guardarlo. Lo sport per me è divertimento, amicizia e crescita personale.</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
@@ -83,10 +83,12 @@
   
         <div class="col-4 mezzo">
           <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
+            <img src="./img/6492369.webp" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">Musica</h5>
+              <p class="card-text">Ascoltare musica è la mia passione. Mi rilassa, mi fa compagnia e spesso riesce a esprimere quello che sento meglio delle parole. La musica per me è un rifugio e una fonte di energia.
+
+</p>
               <a href="#" class="btn btn-primary">Go somewhere</a>
             </div>
           </div>
@@ -110,8 +112,8 @@
 
              <h5>Esperienza lavorativa</h5>
              <p>
-             <b>Ruolo ricoperto</b> -Nome azienda <br>
-             <i>Data inizio - Data fine</i>
+             <b>Operatore informatico</b> - Vapore1928<br>
+             <i>09/2024 - 01/2025 </i>
              <br>
              </p>
              <h5>Istruzione</h5>
