--- a/index.html
+++ b/index.html
@@ -75,21 +75,19 @@
             <div class="card-body">
               <h5 class="card-title">Sport: Calcio e Basket</h5>
               <p class="card-text">Il calcio e il basket sono le mie passioni principali: mi piace giocare a calcio con gli amici e seguire le partite, ma anche il basket mi entusiasma molto, sia praticarlo che guardarlo. Lo sport per me è divertimento, amicizia e crescita personale.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="https://open.spotify.com/intl-it/artist/4V8LLVI7PbaPR0K2TGSxFF?si=7JbFxu63SdOjYlAI-4w7oA" class="btn btn-primary" target="_blank">Go somewhere</a>
             </div>
           </div>
         </div>
   
   
         <div class="col-4 mezzo">
-          <div class="card" style="width: 18rem;">
+          <div class="card">
             <img src="./img/6492369.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">Musica</h5>
-              <p class="card-text">Ascoltare musica è la mia passione. Mi rilassa, mi fa compagnia e spesso riesce a esprimere quello che sento meglio delle parole. La musica per me è un rifugio e una fonte di energia.
-
-</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <p class="card-text">Ascoltare musica è la mia passione. Mi rilassa, mi fa compagnia e spesso riesce a esprimere quello che sento meglio delle parole. La musica per me è un rifugio e una fonte di energia.</p>
+              <a href="https://open.spotify.com/intl-it/artist/4V8LLVI7PbaPR0K2TGSxFF?si=7JbFxu63SdOjYlAI-4w7oA" class="btn btn-primary" target="_blank">Go somewhere</a>
             </div>
           </div>
         </div>
@@ -107,13 +105,13 @@
              <hr>
 
              <h5>Bio</h5>
-             <p>due righe di bio personale</p>
+             <p>Appassionato di informatica, sono una persona curiosa e motivata, con grande voglia di imparare e crescere. Mi adatto facilmente a diversi contesti lavorativi e affronto ogni sfida con impegno, entusiasmo e spirito di collaborazione.</p>
              <br>
 
              <h5>Esperienza lavorativa</h5>
              <p>
              <b>Operatore informatico</b> - Vapore1928<br>
-             <i>09/2024 - 01/2025 </i>
+             <i>Settermbre 2024 - Gennnaio 2025 </i>
              <br>
              </p>
              <h5>Istruzione</h5>
