--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="card-body">
               <h5 class="card-title">Videogiochi</h5>
               <p class="card-text">Fin da piccolo, ho sempre avuto una passione per i videogiochi. Mi ha sempre appassionato sia la parte di programmazione sia la parte di grafica.</p>
-              <a href="#" class="btn btn-primary">Go somewhere</a>
+              <a href="https://www.xbox.com/it-IT/" class="btn btn-primary" target="_blank">Go somewhere</a>
             </div>
           </div>
         </div>
@@ -75,7 +75,7 @@
             <div class="card-body">
               <h5 class="card-title">Sport: Calcio e Basket</h5>
               <p class="card-text">Il calcio e il basket sono le mie passioni principali: mi piace giocare a calcio con gli amici e seguire le partite, ma anche il basket mi entusiasma molto, sia praticarlo che guardarlo. Lo sport per me è divertimento, amicizia e crescita personale.</p>
-              <a href="https://open.spotify.com/intl-it/artist/4V8LLVI7PbaPR0K2TGSxFF?si=7JbFxu63SdOjYlAI-4w7oA" class="btn btn-primary" target="_blank">Go somewhere</a>
+              <a href="https://it.wikipedia.org/wiki/Kevin_Durant" class="btn btn-primary" target="_blank">Go somewhere</a>
             </div>
           </div>
         </div>
@@ -139,9 +139,10 @@
             </div>
           </div>
           <div class="row justify-content-center mb-5">
-
-          <button type="button" class="btn btn-outline-primary col-4">Scarica il CV</button>
-        </div>
+            <a href="./img/Gabriele Codecasa.pdf" download class="col-4">
+              <button type="button" class="btn btn-outline-primary w-100">Scarica il CV</button>
+            </a>
+          </div>
       </div>
       </section>
 
@@ -152,9 +153,9 @@
       <footer> 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-4">colonna 1 </div>
+        <div class="col-4"> </div>
         <div class="col-4 mezzo">
-          <a href="mailto:gabriele.codecasa@edu.immaginazioneelavoro.ir">
+          <a href=".//img/Gabriele Codecasa.pdf" download>
             <button type="button" class="btn btn-dark">Contattami</button>
           </a>
         </div>
