--- a/pages/stage.html
+++ b/pages/stage.html
@@ -81,7 +81,7 @@ Una volta terminato il tirocinio, il tutor aziendale ha il dovere di firmare i r
             <div class="col-6 foglio"> 
               <h4 class="text-center">Gabriele Codecasa</h4>
               <p class="text-center">
-               Introduzione della esperienza lavorativa
+               Descrizione della esperienza lavorativa
               </p>
              <hr>
 
@@ -103,7 +103,7 @@ La nostra pausa pranzo durava dalle 12:30 alle 13:30 circa, dopodichè lavoravam
             <div class="col-6 foglio"> 
               <h4 class="text-center">Gabriele Codecasa</h4>
               <p class="text-center">
-               Introduzione della esperienza lavorativa
+               Autovalutazione della esperienza lavorativa
               </p>
              <hr>
 
