--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </div>
           </div>
           <div class="row justify-content-center mb-5">
-            <a href="./img/Gabriele Codecasa.pdf" download class="col-4">
+            <a href="./img/cv_Gabriele_Codecasa.docx" download class="col-4">
               <button type="button" class="btn btn-outline-primary w-100">Scarica il CV</button>
             </a>
           </div>
