--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
              <h5>Esperienza lavorativa</h5>
              <p>
-             <b>Operatore informatico</b> - Vapore1928<br>
+             <b>Tecnico informatico</b> - Vapore1928<br>
              <i>Settermbre 2024 - Gennnaio 2025 </i>
              <br>
              </p>
