--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <section class="hero">
       <h1>Ciao, sono Gabriele</h1>
-      <h3>Operatore Infomatico</h3>
+      <h3>Tecnico Infomatico</h3>
       </section>
 
       <section class="passioni">
